templates/apiserver.yaml
apiVersion: v1
kind: Service
metadata:
  name: ndslabs-apiserver
  labels:
    component: ndslabs-apiserver
spec:
  selector:
    component: ndslabs-apiserver
  ports:
    - port: 30001
      protocol: TCP
