templates/bety.yaml
apiVersion: v1
kind: Service
metadata:
  name: terra-bety
  labels:
    component: terra-bety
spec:
  selector:
    component: terra-bety
  ports:
    - port: 5432
      protocol: TCP
