templates/webui.yaml
apiVersion: v1
kind: Service
metadata:
  name: ndslabs-webui
  labels:
    component: ndslabs-webui
spec:
  selector:
    component: ndslabs-webui
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
